@@ -10,32 +10,34 @@ package org.elasticsearch.monitor.jvm;
 
 import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.test.ESTestCase;
+import org.mockito.InOrder;
 import org.mockito.Matchers;
 
 import java.lang.management.ThreadInfo;
 import java.lang.management.ThreadMXBean;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 import static org.hamcrest.Matchers.containsString;
 import static org.mockito.Matchers.anyInt;
 import static org.mockito.Matchers.eq;
+import static org.mockito.Mockito.inOrder;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 public class HotThreadsTests extends ESTestCase {
 
     public void testSupportedThreadsReportType() {
-        for (String type: new String[] {"unsupported", "", null, "CPU", "WAIT", "BLOCK" }) {
-            expectThrows(IllegalArgumentException.class, () -> new HotThreads().type(type));
+        for (String type : new String[]{"unsupported", "", null, "CPU", "WAIT", "BLOCK"}) {
+            expectThrows(IllegalArgumentException.class, () -> new HotThreads().type(HotThreads.ReportType.of(type)));
         }
 
-        for (String type : new String[] { "cpu", "wait", "block" }) {
+        for (String type : new String[]{"cpu", "wait", "block"}) {
             try {
-                new HotThreads().type(type);
+                new HotThreads().type(HotThreads.ReportType.of(type));
             } catch (IllegalArgumentException e) {
                 fail(String.format(Locale.ROOT, "IllegalArgumentException called when creating HotThreads for supported type [%s]", type));
             }
@@ -55,26 +57,33 @@ public class HotThreadsTests extends ESTestCase {
     }
 
     public void testIdleThreadsDetection() {
-        for (String threadName : new String[] { "Signal Dispatcher", "Finalizer", "Reference Handler" }) {
+        for (String threadName : new String[]{
+            "Signal Dispatcher", "Finalizer", "Reference Handler", "Notification Thread", "Common-Cleaner", "process reaper"}) {
             ThreadInfo mockedThreadInfo = mock(ThreadInfo.class);
             when(mockedThreadInfo.getThreadName()).thenReturn(threadName);
+            assertTrue(HotThreads.isKnownJDKThread(mockedThreadInfo));
             assertTrue(HotThreads.isIdleThread(mockedThreadInfo));
         }
 
-        for (String threadName : new String[] { "Notification Thread", "Common-Cleaner" }) {
+        for (String threadName : new String[]{"Text", "", null, "Finalizer".toLowerCase(Locale.ROOT)}) {
             ThreadInfo mockedThreadInfo = mock(ThreadInfo.class);
             when(mockedThreadInfo.getThreadName()).thenReturn(threadName);
             when(mockedThreadInfo.getStackTrace()).thenReturn(new StackTraceElement[0]);
+            assertFalse(HotThreads.isKnownJDKThread(mockedThreadInfo));
             assertFalse(HotThreads.isIdleThread(mockedThreadInfo));
         }
 
         List<StackTraceElement> testJvmStack = makeThreadStackHelper(
-            Arrays.asList(
+            org.elasticsearch.core.List.of(
                 new String[]{"org.elasticsearch.monitor.test", "methodOne"},
                 new String[]{"org.elasticsearch.monitor.testOther", "methodTwo"},
                 new String[]{"org.elasticsearch.monitor.test", "methodThree"},
                 new String[]{"org.elasticsearch.monitor.testOther", "methodFour"}
             ));
+
+        for (StackTraceElement stackFrame : testJvmStack) {
+            assertFalse(HotThreads.isKnownIdleStackFrame(stackFrame.getClassName(), stackFrame.getMethodName()));
+        }
 
         ThreadInfo notIdleThread = mock(ThreadInfo.class);
         when(notIdleThread.getThreadName()).thenReturn("Not Idle Thread");
@@ -83,18 +92,20 @@ public class HotThreadsTests extends ESTestCase {
         assertFalse(HotThreads.isIdleThread(notIdleThread));
 
         List<StackTraceElement> idleThreadStackElements = makeThreadStackHelper(
-            Arrays.asList(
+            org.elasticsearch.core.List.of(
                 new String[]{"java.util.concurrent.ThreadPoolExecutor", "getTask"},
                 new String[]{"sun.nio.ch.SelectorImpl", "select"},
                 new String[]{"org.elasticsearch.threadpool.ThreadPool$CachedTimeThread", "run"},
                 new String[]{"org.elasticsearch.indices.ttl.IndicesTTLService$Notifier", "await"},
-                new String[]{"java.util.concurrent.LinkedTransferQueue", "poll"}
+                new String[]{"java.util.concurrent.LinkedTransferQueue", "poll"},
+                new String[]{"com.sun.jmx.remote.internal.ServerCommunicatorAdmin$Timeout", "run"}
             ));
 
         for (StackTraceElement extraFrame : idleThreadStackElements) {
             ThreadInfo idleThread = mock(ThreadInfo.class);
             when(idleThread.getThreadName()).thenReturn("Idle Thread");
-            when(idleThread.getStackTrace()).thenReturn(new StackTraceElement[] {extraFrame});
+            when(idleThread.getStackTrace()).thenReturn(new StackTraceElement[]{extraFrame});
+            assertTrue(HotThreads.isKnownIdleStackFrame(extraFrame.getClassName(), extraFrame.getMethodName()));
             assertTrue(HotThreads.isIdleThread(idleThread));
 
             List<StackTraceElement> topOfStack = new ArrayList<>(testJvmStack);
@@ -115,25 +126,25 @@ public class HotThreadsTests extends ESTestCase {
 
     public void testSimilarity() {
         StackTraceElement[] stackOne = makeThreadStackHelper(
-            Arrays.asList(
+            org.elasticsearch.core.List.of(
                 new String[]{"org.elasticsearch.monitor.test", "methodOne"},
                 new String[]{"org.elasticsearch.monitor.testOther", "methodTwo"}
             )).toArray(new StackTraceElement[0]);
 
         StackTraceElement[] stackTwo = makeThreadStackHelper(
-            Arrays.asList(
+            org.elasticsearch.core.List.of(
                 new String[]{"org.elasticsearch.monitor.test1", "methodOne"},
                 new String[]{"org.elasticsearch.monitor.testOther", "methodTwo"}
             )).toArray(new StackTraceElement[0]);
 
         StackTraceElement[] stackThree = makeThreadStackHelper(
-            Arrays.asList(
+            org.elasticsearch.core.List.of(
                 new String[]{"org.elasticsearch.monitor.testOther", "methodTwo"},
                 new String[]{"org.elasticsearch.monitor.test", "methodOne"}
             )).toArray(new StackTraceElement[0]);
 
         StackTraceElement[] stackFour = makeThreadStackHelper(
-            Arrays.asList(
+            org.elasticsearch.core.List.of(
                 new String[]{"org.elasticsearch.monitor.testPrior", "methodOther"},
                 new String[]{"org.elasticsearch.monitor.test", "methodOne"},
                 new String[]{"org.elasticsearch.monitor.testOther", "methodTwo"}
@@ -154,7 +165,7 @@ public class HotThreadsTests extends ESTestCase {
             }
         }
 
-        SimilarityTestCase[] testCases = new SimilarityTestCase[] {
+        SimilarityTestCase[] testCases = new SimilarityTestCase[]{
             new SimilarityTestCase(stackOne, stackOne, 2),
             new SimilarityTestCase(stackOne, stackTwo, 1),
             new SimilarityTestCase(stackOne, stackThree, 0),
@@ -182,37 +193,43 @@ public class HotThreadsTests extends ESTestCase {
         assertEquals(0, hotThreads.similarity(threadOne, null));
     }
 
-    // We call this helper for each different mode to reset the before and after timings.
-    private List<ThreadInfo> makeThreadInfoMocksHelper(ThreadMXBean mockedMXBean, long[] threadIds) {
-        List<ThreadInfo> allInfos = new ArrayList<>(threadIds.length);
+    private ThreadInfo makeThreadInfoMocksHelper(ThreadMXBean mockedMXBean, long threadId) {
+        when(mockedMXBean.getThreadCpuTime(threadId)).thenReturn(0L).thenReturn(threadId);
+        ThreadInfo mockedThreadInfo = mock(ThreadInfo.class);
+        when(mockedMXBean.getThreadInfo(eq(threadId), anyInt())).thenReturn(mockedThreadInfo);
+        when(mockedThreadInfo.getThreadName()).thenReturn(String.format(Locale.ROOT, "Thread %d", threadId));
 
-        for (long threadId : threadIds) {
-            // We first return 0 for all timings, then a true value to create the reporting deltas.
-            when(mockedMXBean.getThreadCpuTime(threadId)).thenReturn(0L).thenReturn(threadId);
-            ThreadInfo mockedThreadInfo = mock(ThreadInfo.class);
-            when(mockedMXBean.getThreadInfo(eq(threadId), anyInt())).thenReturn(mockedThreadInfo);
-            when(mockedThreadInfo.getThreadName()).thenReturn(String.format(Locale.ROOT, "Thread %d", threadId));
+        // We create some variability for the blocked and waited times. Odd and even.
+        when(mockedThreadInfo.getBlockedCount()).thenReturn(0L).thenReturn(threadId % 2);
+        long blockedTime = ((threadId % 2) == 0) ? 0L : threadId;
+        when(mockedThreadInfo.getBlockedTime()).thenReturn(0L).thenReturn(blockedTime);
 
-            // We create some variability for the blocked and waited times. Odd and even.
-            when(mockedThreadInfo.getBlockedCount()).thenReturn(0L).thenReturn(threadId % 2);
-            long blockedTime = ((threadId % 2) == 0) ? 0L : threadId;
-            when(mockedThreadInfo.getBlockedTime()).thenReturn(0L).thenReturn(blockedTime);
+        when(mockedThreadInfo.getWaitedCount()).thenReturn(0L).thenReturn((threadId + 1) % 2);
+        long waitTime = (((threadId + 1) % 2) == 0) ? 0L : threadId;
+        when(mockedThreadInfo.getWaitedTime()).thenReturn(0L).thenReturn(waitTime);
 
-            when(mockedThreadInfo.getWaitedCount()).thenReturn(0L).thenReturn((threadId + 1) % 2);
-            long waitTime = (((threadId + 1) % 2) == 0) ? 0L : threadId;
-            when(mockedThreadInfo.getWaitedTime()).thenReturn(0L).thenReturn(waitTime);
-
-            when(mockedThreadInfo.getThreadId()).thenReturn(threadId);
+        when(mockedThreadInfo.getThreadId()).thenReturn(threadId);
 
             StackTraceElement[] stack = makeThreadStackHelper(
-                Arrays.asList(
+                org.elasticsearch.core.List.of(
                     new String[]{"org.elasticsearch.monitor.test", String.format(Locale.ROOT, "method_%d", (threadId) % 2)},
                     new String[]{"org.elasticsearch.monitor.testOther", "methodFinal"}
                 )).toArray(new StackTraceElement[0]);
             when(mockedThreadInfo.getStackTrace()).thenReturn(stack);
 
-            allInfos.add(mockedThreadInfo);
+        return mockedThreadInfo;
+    }
+
+    // We call this helper for each different mode to reset the before and after timings.
+    private List<ThreadInfo> makeThreadInfoMocksHelper(ThreadMXBean mockedMXBean, long[] threadIds) {
+        List<ThreadInfo> allInfos = new ArrayList<>(threadIds.length);
+
+        for (long threadId : threadIds) {
+            allInfos.add(makeThreadInfoMocksHelper(mockedMXBean, threadId));
         }
+
+        when(mockedMXBean.getThreadInfo(Matchers.any(), anyInt())).thenReturn(allInfos.toArray(new ThreadInfo[0]));
+        when(mockedMXBean.getThreadInfo(Matchers.any(long[].class))).thenReturn(allInfos.toArray(new ThreadInfo[0]));
 
         return allInfos;
     }
@@ -221,17 +238,18 @@ public class HotThreadsTests extends ESTestCase {
         ThreadMXBean mockedMXBean = mock(ThreadMXBean.class);
         when(mockedMXBean.isThreadCpuTimeSupported()).thenReturn(true);
 
-        long[] threadIds = new long[] { 1, 2, 3, 4 }; // Adds up to 10, the intervalNanos for calculating time percentages
+        long[] threadIds = new long[]{1, 2, 3, 4}; // Adds up to 10, the intervalNanos for calculating time percentages
         long mockCurrentThreadId = 0L;
         when(mockedMXBean.getAllThreadIds()).thenReturn(threadIds);
 
         List<ThreadInfo> allInfos = makeThreadInfoMocksHelper(mockedMXBean, threadIds);
-        List<ThreadInfo> cpuOrderedInfos = Arrays.asList(allInfos.get(3), allInfos.get(2), allInfos.get(1), allInfos.get(0));
+        List<ThreadInfo> cpuOrderedInfos = org.elasticsearch.core.List.of(
+            allInfos.get(3), allInfos.get(2), allInfos.get(1), allInfos.get(0));
         when(mockedMXBean.getThreadInfo(Matchers.any(), anyInt())).thenReturn(cpuOrderedInfos.toArray(new ThreadInfo[0]));
 
         HotThreads hotThreads = new HotThreads()
             .busiestThreads(4)
-            .type("cpu")
+            .type(HotThreads.ReportType.CPU)
             .interval(TimeValue.timeValueNanos(10))
             .threadElementsSnapshotCount(11)
             .ignoreIdleThreads(false);
@@ -259,13 +277,14 @@ public class HotThreadsTests extends ESTestCase {
 
         HotThreads hotWaitingThreads = new HotThreads()
             .busiestThreads(4)
-            .type("wait")
+            .type(HotThreads.ReportType.WAIT)
             .interval(TimeValue.timeValueNanos(10))
             .threadElementsSnapshotCount(11)
             .ignoreIdleThreads(false);
 
         allInfos = makeThreadInfoMocksHelper(mockedMXBean, threadIds);
-        List<ThreadInfo> waitOrderedInfos = Arrays.asList(allInfos.get(3), allInfos.get(1), allInfos.get(0), allInfos.get(2));
+        List<ThreadInfo> waitOrderedInfos = org.elasticsearch.core.List.of(
+            allInfos.get(3), allInfos.get(1), allInfos.get(0), allInfos.get(2));
         when(mockedMXBean.getThreadInfo(Matchers.any(), anyInt())).thenReturn(waitOrderedInfos.toArray(new ThreadInfo[0]));
 
         String waitInnerResult = hotWaitingThreads.innerDetect(mockedMXBean, mockCurrentThreadId);
@@ -277,13 +296,14 @@ public class HotThreadsTests extends ESTestCase {
 
         HotThreads hotBlockedThreads = new HotThreads()
             .busiestThreads(4)
-            .type("block")
+            .type(HotThreads.ReportType.BLOCK)
             .interval(TimeValue.timeValueNanos(10))
             .threadElementsSnapshotCount(11)
             .ignoreIdleThreads(false);
 
         allInfos = makeThreadInfoMocksHelper(mockedMXBean, threadIds);
-        List<ThreadInfo> blockOrderedInfos = Arrays.asList(allInfos.get(2), allInfos.get(0), allInfos.get(1), allInfos.get(3));
+        List<ThreadInfo> blockOrderedInfos = org.elasticsearch.core.List.of(
+            allInfos.get(2), allInfos.get(0), allInfos.get(1), allInfos.get(3));
         when(mockedMXBean.getThreadInfo(Matchers.any(), anyInt())).thenReturn(blockOrderedInfos.toArray(new ThreadInfo[0]));
 
         String blockInnerResult = hotBlockedThreads.innerDetect(mockedMXBean, mockCurrentThreadId);
@@ -292,6 +312,31 @@ public class HotThreadsTests extends ESTestCase {
         assertThat(blockInnerResult, containsString("10.0% (1nanos out of 10nanos) block usage by thread 'Thread 1'"));
         assertThat(blockInnerResult, containsString("0.0% (0s out of 10nanos) block usage by thread 'Thread 2'"));
         assertThat(blockInnerResult, containsString("0.0% (0s out of 10nanos) block usage by thread 'Thread 4'"));
+
+        // Test with only one stack to trigger the different print in innerDetect
+
+        allInfos = makeThreadInfoMocksHelper(mockedMXBean, threadIds);
+        cpuOrderedInfos = org.elasticsearch.core.List.of(allInfos.get(3), allInfos.get(2), allInfos.get(1), allInfos.get(0));
+        when(mockedMXBean.getThreadInfo(Matchers.any(), anyInt())).thenReturn(cpuOrderedInfos.toArray(new ThreadInfo[0]));
+
+        hotThreads = new HotThreads()
+            .busiestThreads(4)
+            .type(HotThreads.ReportType.CPU)
+            .interval(TimeValue.timeValueNanos(10))
+            .threadElementsSnapshotCount(1)
+            .ignoreIdleThreads(false);
+
+        String singleResult = hotThreads.innerDetect(mockedMXBean, mockCurrentThreadId);
+
+        assertThat(singleResult, containsString("  unique snapshot"));
+        assertEquals(5, singleResult.split(" unique snapshot").length);
+        assertThat(singleResult, containsString("40.0% (4nanos out of 10nanos) cpu usage by thread 'Thread 4'"));
+        assertThat(singleResult, containsString("30.0% (3nanos out of 10nanos) cpu usage by thread 'Thread 3'"));
+        assertThat(singleResult, containsString("20.0% (2nanos out of 10nanos) cpu usage by thread 'Thread 2'"));
+        assertThat(singleResult, containsString("10.0% (1nanos out of 10nanos) cpu usage by thread 'Thread 1'"));
+        assertThat(innerResult, containsString("org.elasticsearch.monitor.test.method_0(Some_File:1)"));
+        assertThat(innerResult, containsString("org.elasticsearch.monitor.test.method_1(Some_File:1)"));
+        assertThat(innerResult, containsString("org.elasticsearch.monitor.testOther.methodFinal(Some_File:1)"));
     }
 
     public void testEnsureInnerDetectSkipsCurrentThread() throws Exception {
@@ -299,7 +344,7 @@ public class HotThreadsTests extends ESTestCase {
         when(mockedMXBean.isThreadCpuTimeSupported()).thenReturn(true);
 
         long mockCurrentThreadId = 5L;
-        long[] threadIds = new long[] { mockCurrentThreadId }; // Matches half the intervalNanos for calculating time percentages
+        long[] threadIds = new long[]{mockCurrentThreadId}; // Matches half the intervalNanos for calculating time percentages
 
         when(mockedMXBean.getAllThreadIds()).thenReturn(threadIds);
 
@@ -308,7 +353,7 @@ public class HotThreadsTests extends ESTestCase {
 
         HotThreads hotThreads = new HotThreads()
             .busiestThreads(4)
-            .type("cpu")
+            .type(HotThreads.ReportType.CPU)
             .interval(TimeValue.timeValueNanos(10))
             .threadElementsSnapshotCount(11)
             .ignoreIdleThreads(false);
@@ -316,5 +361,253 @@ public class HotThreadsTests extends ESTestCase {
         String innerResult = hotThreads.innerDetect(mockedMXBean, mockCurrentThreadId);
 
         assertEquals(1, innerResult.split("\r\n|\r|\n").length);
+    }
+
+    public void testReportTypeValueGetter() {
+        ThreadInfo mockedThreadInfo = mock(ThreadInfo.class);
+
+        when(mockedThreadInfo.getBlockedTime()).thenReturn(2L).thenReturn(0L);
+        when(mockedThreadInfo.getWaitedTime()).thenReturn(3L).thenReturn(0L);
+
+        HotThreads.ThreadTimeAccumulator info = new HotThreads.ThreadTimeAccumulator(mockedThreadInfo, 1L);
+
+        assertEquals(1L, HotThreads.ThreadTimeAccumulator.valueGetterForReportType(HotThreads.ReportType.CPU).applyAsLong(info));
+        assertEquals(3L, HotThreads.ThreadTimeAccumulator.valueGetterForReportType(HotThreads.ReportType.WAIT).applyAsLong(info));
+        assertEquals(2L, HotThreads.ThreadTimeAccumulator.valueGetterForReportType(HotThreads.ReportType.BLOCK).applyAsLong(info));
+
+        //Ensure all enum types have a report type getter
+        for (HotThreads.ReportType type : HotThreads.ReportType.values()) {
+            assertNotNull(HotThreads.ThreadTimeAccumulator.valueGetterForReportType(type));
+        }
+    }
+
+    public void testGetAllValidThreadInfos() {
+        ThreadMXBean mockedMXBean = mock(ThreadMXBean.class);
+        when(mockedMXBean.isThreadCpuTimeSupported()).thenReturn(true);
+
+        long[] threadIds = new long[]{1, 2, 3, 4}; // Adds up to 10, the intervalNanos for calculating time percentages
+        long mockCurrentThreadId = 0L;
+        when(mockedMXBean.getAllThreadIds()).thenReturn(threadIds);
+
+        HotThreads hotThreads = new HotThreads()
+            .busiestThreads(4)
+            .type(HotThreads.ReportType.CPU)
+            .interval(TimeValue.timeValueNanos(10))
+            .threadElementsSnapshotCount(11)
+            .ignoreIdleThreads(false);
+
+        // Test the case when all threads exist before and after sleep
+        List<ThreadInfo> allInfos = makeThreadInfoMocksHelper(mockedMXBean, threadIds);
+
+        Map<Long, HotThreads.ThreadTimeAccumulator> validInfos = hotThreads.getAllValidThreadInfos(mockedMXBean, mockCurrentThreadId);
+        assertEquals(allInfos.size(), validInfos.size());
+
+        for (long threadId : threadIds) {
+            HotThreads.ThreadTimeAccumulator accumulator = validInfos.get(threadId);
+            assertNotNull(accumulator);
+            assertEquals(0, accumulator.getCpuTime());
+            assertEquals(0, accumulator.getBlockedTime());
+            assertEquals(0, accumulator.getWaitedTime());
+        }
+
+        // Fake sleep, e.g don't sleep call the mock again
+
+        Map<Long, HotThreads.ThreadTimeAccumulator> afterValidInfos = hotThreads.getAllValidThreadInfos(mockedMXBean, mockCurrentThreadId);
+        assertEquals(allInfos.size(), afterValidInfos.size());
+        for (long threadId : threadIds) {
+            HotThreads.ThreadTimeAccumulator accumulator = afterValidInfos.get(threadId);
+            assertNotNull(accumulator);
+            boolean evenThreadId = ((threadId % 2) == 0);
+
+            assertEquals(threadId, accumulator.getCpuTime());
+            assertEquals((evenThreadId) ? 0 : threadId, accumulator.getBlockedTime());
+            assertEquals((evenThreadId) ? threadId : 0, accumulator.getWaitedTime());
+        }
+
+        // Test when a thread has terminated during sleep, we don't report that thread
+        allInfos = makeThreadInfoMocksHelper(mockedMXBean, threadIds);
+
+        validInfos = hotThreads.getAllValidThreadInfos(mockedMXBean, mockCurrentThreadId);
+        assertEquals(allInfos.size(), validInfos.size());
+
+        ThreadInfo removedInfo = allInfos.remove(0);
+        long[] reducedThreadIds = new long[]{2, 3, 4};
+        when(mockedMXBean.getAllThreadIds()).thenReturn(reducedThreadIds);
+        when(mockedMXBean.getThreadInfo(Matchers.any(), anyInt())).thenReturn(allInfos.toArray(new ThreadInfo[0]));
+        when(mockedMXBean.getThreadInfo(Matchers.any(long[].class))).thenReturn(allInfos.toArray(new ThreadInfo[0]));
+
+        // Fake sleep
+
+        afterValidInfos = hotThreads.getAllValidThreadInfos(mockedMXBean, mockCurrentThreadId);
+        assertEquals(reducedThreadIds.length, afterValidInfos.size());
+
+        for (long threadId : reducedThreadIds) {
+            HotThreads.ThreadTimeAccumulator accumulator = afterValidInfos.get(threadId);
+            assertNotNull(accumulator);
+            boolean evenThreadId = ((threadId % 2) == 0);
+
+            assertEquals(threadId, accumulator.getCpuTime());
+            assertEquals((evenThreadId) ? 0 : threadId, accumulator.getBlockedTime());
+            assertEquals((evenThreadId) ? threadId : 0, accumulator.getWaitedTime());
+        }
+
+        // Test capturing timings for thread that launched while we were sleeping
+        allInfos.add(0, removedInfo); // We called getInfo on this once, so second time should be with cpu/wait > 0
+        when(mockedMXBean.getAllThreadIds()).thenReturn(threadIds);
+        when(mockedMXBean.getThreadInfo(Matchers.any(), anyInt())).thenReturn(allInfos.toArray(new ThreadInfo[0]));
+        when(mockedMXBean.getThreadInfo(Matchers.any(long[].class))).thenReturn(allInfos.toArray(new ThreadInfo[0]));
+
+        // Fake sleep
+
+        afterValidInfos = hotThreads.getAllValidThreadInfos(mockedMXBean, mockCurrentThreadId);
+        assertEquals(threadIds.length, afterValidInfos.size());
+
+        HotThreads.ThreadTimeAccumulator firstAccumulator = afterValidInfos.get(removedInfo.getThreadId());
+        assertEquals(1, firstAccumulator.getCpuTime());
+        assertEquals(0, firstAccumulator.getWaitedTime());
+        assertEquals(1, firstAccumulator.getBlockedTime());
+
+        // Test skipping of current thread
+        validInfos = hotThreads.getAllValidThreadInfos(mockedMXBean, threadIds[threadIds.length - 1]);
+        assertEquals(threadIds.length - 1, validInfos.size());
+        assertFalse(validInfos.containsKey(threadIds[threadIds.length - 1]));
+
+        // Test skipping threads with CPU time of -1
+        when(mockedMXBean.getThreadCpuTime(threadIds[0])).thenReturn(-1L);
+        validInfos = hotThreads.getAllValidThreadInfos(mockedMXBean, mockCurrentThreadId);
+        assertEquals(threadIds.length - 1, validInfos.size());
+        assertFalse(validInfos.containsKey(threadIds[0]));
+
+        // Test skipping null thread infos
+        when(mockedMXBean.getThreadInfo(eq(threadIds[0]), anyInt())).thenReturn(null);
+        validInfos = hotThreads.getAllValidThreadInfos(mockedMXBean, mockCurrentThreadId);
+        assertEquals(threadIds.length - 1, validInfos.size());
+        assertFalse(validInfos.containsKey(threadIds[0]));
+    }
+
+    public void testCaptureThreadStacks() throws InterruptedException {
+        ThreadMXBean mockedMXBean = mock(ThreadMXBean.class);
+        when(mockedMXBean.isThreadCpuTimeSupported()).thenReturn(true);
+
+        long[] threadIds = new long[]{1, 2, 3, 4}; // Adds up to 10, the intervalNanos for calculating time percentages
+        when(mockedMXBean.getAllThreadIds()).thenReturn(threadIds);
+
+        HotThreads hotThreads = new HotThreads()
+            .busiestThreads(4)
+            .type(HotThreads.ReportType.CPU)
+            .interval(TimeValue.timeValueNanos(1))
+            .threadElementsSnapshotCount(3)
+            .ignoreIdleThreads(false);
+
+        // Setup the mocks
+        List<ThreadInfo> allInfos = makeThreadInfoMocksHelper(mockedMXBean, threadIds);
+
+        long[] topThreadIds = new long[]{threadIds[threadIds.length - 1], threadIds[threadIds.length - 2]};
+        List<ThreadInfo> topThreads = org.elasticsearch.core.List.of(
+            allInfos.get(threadIds.length - 1),
+            allInfos.get(threadIds.length - 2));
+
+        when(mockedMXBean.getThreadInfo(Matchers.any(long[].class), anyInt())).thenReturn(topThreads.toArray(new ThreadInfo[0]));
+
+        ThreadInfo[][] infosWithStacks = hotThreads.captureThreadStacks(mockedMXBean, topThreadIds);
+
+        assertEquals(3, infosWithStacks.length);
+        for (ThreadInfo[] infos : infosWithStacks) {
+            assertEquals(2, infos.length);
+            assertEquals(threadIds[threadIds.length - 1], infos[0].getThreadId());
+            assertEquals(threadIds[threadIds.length - 2], infos[1].getThreadId());
+        }
+    }
+
+    public void testThreadInfoAccumulator() {
+        ThreadMXBean mockedMXBean = mock(ThreadMXBean.class);
+        when(mockedMXBean.isThreadCpuTimeSupported()).thenReturn(true);
+
+        ThreadInfo threadOne = makeThreadInfoMocksHelper(mockedMXBean, 1L);
+        ThreadInfo threadTwo = makeThreadInfoMocksHelper(mockedMXBean, 2L);
+
+        HotThreads.ThreadTimeAccumulator acc = new HotThreads.ThreadTimeAccumulator(threadOne, 100L);
+        HotThreads.ThreadTimeAccumulator accNext = new HotThreads.ThreadTimeAccumulator(threadOne, 250L);
+        accNext.subtractPrevious(acc);
+
+        assertEquals(150, accNext.getCpuTime());
+        assertEquals(0, accNext.getWaitedTime());
+        assertEquals(1, accNext.getBlockedTime());
+
+        HotThreads.ThreadTimeAccumulator accNotMoving = new HotThreads.ThreadTimeAccumulator(threadOne, 250L);
+        HotThreads.ThreadTimeAccumulator accNotMovingNext = new HotThreads.ThreadTimeAccumulator(threadOne, 250L);
+
+        accNotMovingNext.subtractPrevious(accNotMoving);
+
+        assertEquals(0, accNotMovingNext.getCpuTime());
+        assertEquals(0, accNotMovingNext.getWaitedTime());
+        assertEquals(0, accNotMovingNext.getBlockedTime());
+
+        HotThreads.ThreadTimeAccumulator accOne = new HotThreads.ThreadTimeAccumulator(threadOne, 250L);
+        HotThreads.ThreadTimeAccumulator accTwo = new HotThreads.ThreadTimeAccumulator(threadTwo, 350L);
+
+        expectThrows(IllegalStateException.class, () -> accTwo.subtractPrevious(accOne));
+    }
+
+    public void testWaitBlockTimeMonitoringEnabled() throws Exception {
+        ThreadMXBean mockedMXBean = mock(ThreadMXBean.class);
+        when(mockedMXBean.isThreadCpuTimeSupported()).thenReturn(true);
+        when(mockedMXBean.isThreadContentionMonitoringSupported()).thenReturn(true);
+
+        long[] threadIds = new long[]{1, 2, 3, 4}; // Adds up to 10, the intervalNanos for calculating time percentages
+        long mockCurrentThreadId = 0L;
+        when(mockedMXBean.getAllThreadIds()).thenReturn(threadIds);
+
+        List<ThreadInfo> allInfos = makeThreadInfoMocksHelper(mockedMXBean, threadIds);
+        List<ThreadInfo> cpuOrderedInfos = org.elasticsearch.core.List.of(
+            allInfos.get(3), allInfos.get(2), allInfos.get(1), allInfos.get(0));
+        when(mockedMXBean.getThreadInfo(Matchers.any(), anyInt())).thenReturn(cpuOrderedInfos.toArray(new ThreadInfo[0]));
+
+        HotThreads hotThreads = new HotThreads()
+            .busiestThreads(4)
+            .type(HotThreads.ReportType.CPU)
+            .interval(TimeValue.timeValueNanos(10))
+            .threadElementsSnapshotCount(11)
+            .ignoreIdleThreads(false);
+
+        String innerResult = hotThreads.innerDetect(mockedMXBean, mockCurrentThreadId);
+
+        assertThat(innerResult, containsString("Hot threads at "));
+        assertThat(innerResult, containsString("interval=10nanos, busiestThreads=4, ignoreIdleThreads=false:"));
+        assertThat(innerResult, containsString("11/11 snapshots sharing following 2 elements"));
+        assertThat(innerResult, containsString("40.0% (4nanos out of 10nanos) cpu usage by thread 'Thread 4'"));
+        assertThat(innerResult, containsString("30.0% (3nanos out of 10nanos) cpu usage by thread 'Thread 3'"));
+        assertThat(innerResult, containsString("20.0% (2nanos out of 10nanos) cpu usage by thread 'Thread 2'"));
+        assertThat(innerResult, containsString("10.0% (1nanos out of 10nanos) cpu usage by thread 'Thread 1'"));
+        assertThat(innerResult, containsString("org.elasticsearch.monitor.test.method_0(Some_File:1)"));
+        assertThat(innerResult, containsString("org.elasticsearch.monitor.test.method_1(Some_File:1)"));
+        assertThat(innerResult, containsString("org.elasticsearch.monitor.testOther.methodFinal(Some_File:1)"));
+
+        // Ensure we called the monitoring enabled with true and then with false
+        InOrder orderVerifier = inOrder(mockedMXBean);
+        orderVerifier.verify(mockedMXBean).setThreadContentionMonitoringEnabled(true);
+        orderVerifier.verify(mockedMXBean).setThreadContentionMonitoringEnabled(false);
+    }
+
+    public void testWaitBlockTimeMonitoringEnabledWithException() {
+        ThreadMXBean mockedMXBean = mock(ThreadMXBean.class);
+        when(mockedMXBean.isThreadCpuTimeSupported()).thenReturn(true);
+        when(mockedMXBean.isThreadContentionMonitoringSupported()).thenReturn(true);
+
+        when(mockedMXBean.getAllThreadIds()).thenThrow(new RuntimeException("Something bad happened"));
+
+        HotThreads hotThreads = new HotThreads()
+            .busiestThreads(4)
+            .type(HotThreads.ReportType.CPU)
+            .interval(TimeValue.timeValueNanos(10))
+            .threadElementsSnapshotCount(11)
+            .ignoreIdleThreads(false);
+
+        expectThrows(RuntimeException.class, () -> hotThreads.innerDetect(mockedMXBean, 0L));
+
+        // Ensure we called the monitoring enabled with true and then with false even with exception thrown
+        InOrder orderVerifier = inOrder(mockedMXBean);
+        orderVerifier.verify(mockedMXBean).setThreadContentionMonitoringEnabled(true);
+        orderVerifier.verify(mockedMXBean).setThreadContentionMonitoringEnabled(false);
     }
 }
